tests/typecheck/bad/bad_assign.scilexp
let _balance = Uint128 0 in
_balance
